<resources>
    <string name="app_name">Supreme Reader</string>

    <string name="nav_recent_articles">Recent Articles</string>
    <string name="nav_my_subscriptions">My Subscriptions</string>
    <string name="nav_manage_subscriptions">Manage Subscriptions</string>
    <string name="nav_settings">Settings</string>

    <string name="popup_text">URL to RSS/Atom feed</string>
    <string name="popup_placeholder">URL</string>
    <string name="popup_add">Add</string>

    <string name="dialog_error">Error</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_unsubscribe">Are you sure you want to unsubscribe from this feed?</string>
    <string name="dialog_rename">Custom title for this feed:</string>

    <string name="nav_context_copy">Copy feed URL</string>
    <string name="nav_context_rename">Rename</string>
    <string name="nav_context_unsubscribe">Unsubscribe</string>

    <string name="pref_feeds">Feeds</string>
    <string name="pref_max_articles_title">Number of Articles</string>
    <string name="pref_max_articles_summary">Select the max number of articles to display per feed</string>
    <string-array name="pref_max_articles_entries">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string name="pref_max_articles_default">25</string>
    <string name="pref_max_recent_articles_title">Number of Recent Articles</string>
    <string name="pref_max_recent_articles_summary">Select the max number of recent articles to display on the home screen</string>
    <string name="pref_max_recent_articles_default">50</string>
    <string name="pref_misc">Misc</string>
    <string name="pref_clear_cache_title">Clear Cache</string>
    <string name="pref_clear_cache_summary">Delete all images and articles from cache</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">Select application theme</string>
    <string-array name="pref_theme_entries">
        <item>Default</item>
        <item>Dark/AMOLED</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
    </string-array>
    <string name="pref_theme_default">light</string>
</resources>
