<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_feeds">

        <ListPreference
            android:key="max_articles"
            android:title="@string/pref_max_articles_title"
            android:summary="@string/pref_max_articles_summary"
            android:entries="@array/pref_max_articles_entries"
            android:entryValues="@array/pref_max_articles_entries"
            android:defaultValue="@string/pref_max_articles_default" />

        <ListPreference
            android:key="max_recent_articles"
            android:title="@string/pref_max_recent_articles_title"
            android:summary="@string/pref_max_recent_articles_summary"
            android:entries="@array/pref_max_articles_entries"
            android:entryValues="@array/pref_max_articles_entries"
            android:defaultValue="@string/pref_max_recent_articles_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_appearance">

        <ListPreference
            android:key="selected_theme"
            android:title="@string/pref_theme_title"
            android:summary="@string/pref_theme_summary"
            android:entries="@array/pref_theme_entries"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="@string/pref_theme_default"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/pref_misc">

        <Preference
            android:key="clear_cache"
            android:title="@string/pref_clear_cache_title"
            android:summary="@string/pref_clear_cache_summary" />

    </PreferenceCategory>
</PreferenceScreen>