<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/popup_text"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/urlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri"
        android:hint="@string/popup_placeholder"
        android:layout_gravity="center"
        android:textIsSelectable="true"/>

    <Button
        android:id="@+id/urlBtn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/popup_add"
        android:layout_gravity="center"/>
</LinearLayout>